syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.message";
option java_outer_classname = "MessageDataProto";
option objc_class_prefix = "HLW";
 
package Nanomite.Common;

message S_Exception {
	string Code = 1;
	string Message = 2;
	string StackTrace = 3;
	S_Exception InnerException = 4;
}